sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ';' expected but 'else' found.
        else if(i=i+1){
        ^